--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,29 @@ annotated-types==0.7.0
 anyio==4.6.2.post1
 appnope==0.1.4
 asttokens==2.4.1
+blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 debugpy==1.8.5
 decorator==5.1.1
 distro==1.9.0
 executing==2.1.0
+Flask==3.1.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
 idna==3.10
 ipykernel==6.29.5
 ipython==8.27.0
+itsdangerous==2.2.0
 jedi==0.19.1
+Jinja2==3.1.4
 jiter==0.7.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 npm==0.1.1
@@ -34,7 +40,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pydantic==2.9.2
 pydantic_core==2.23.4
-Pygments==2.16.1
+Pygments @ file:///private/tmp/pygments-20230806-5921-1vpw7cv/Pygments-2.16.1
 python-amazon-paapi==5.0.1
 python-dateutil==2.9.0.post0
 pyzmq==26.2.0
@@ -48,3 +54,4 @@ traitlets==5.14.3
 typing_extensions==4.12.2
 urllib3==2.2.3
 wcwidth==0.2.13
+Werkzeug==3.1.3
