--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,7 @@
-NEXT_PUBLIC_API_URL=https://api.openai.com/v1/chat/completions
+# OpenAI API settings
+NEXT_PUBLIC_OPENAI_API_URL=https://api.openai.com/v1/chat/completions
 NEXT_PUBLIC_API_KEY=sk-svcacct-yDZputh65lu27XG4BcXuT3BlbkFJdcHdCqqnp6GMtfs45Xpp
 NEXT_PUBLIC_MODEL=gpt-3.5-turbo
+
+# Flask backend settings
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
